force-app/main/default/objects/Pricing__c/Pricing__c.object-meta.xml
<CustomObject>
    <description>Contains pricing details from SAP. This replaces the standard Pricebook Entry records which have a limitation on only one entry per pricebook &amp; product.</description>
    <label>Pricing</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Pricing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>