force-app/main/default/objects/Pricing__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Indicates when this pricing expires.</description>
    <inlineHelpText>Indicates when this pricing expires.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>