force-app/main/default/objects/Pricing__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>477728 Product Name for sorting in tables and other</description>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Name of the related Product</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>