force-app/main/default/objects/Pricing__c/fields/SAP_External_Id__c.field-meta.xml
<CustomField>
    <fullName>SAP_External_Id__c</fullName>
    <description>A unique identifier tied back to the record in SAP.</description>
    <externalId>true</externalId>
    <inlineHelpText>A unique identifier tied back to the record in SAP.</inlineHelpText>
    <label>SAP External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>