force-app/main/default/objects/Pricing__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Indicates when this pricing becomes available.</description>
    <inlineHelpText>Indicates when this pricing becomes available.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>