force-app/main/default/objects/Pricing__c/fields/Temp_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Temp_Quantity__c</fullName>
    <description>46488 Temp Quantity for WOLI estimate record creation flow. Used downstream in flows whereby user can enter a temp quantity in tables. Value default is 1 and user can modify as needed in that flow.</description>
    <inlineHelpText>Temp Quantity for WOLI estimate record creation flow. hidden in layouts</inlineHelpText>
    <label>Temp Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>