force-app/main/default/objects/Pricing__c/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <description>47728 UoM for Estimate tables in flow</description>
    <formula>TEXT( Product__r.QuantityUnitOfMeasure )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Related Product&apos;s Unit of Measure</inlineHelpText>
    <label>UoM</label>
    <type>Text</type>
</CustomField>